force-app/main/default/objects/copado__Artifact_Dependency__c/copado__Artifact_Dependency__c.object-meta.xml
<CustomObject>
    <label>Artifact Dependency</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Artifact Dependencies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artifact_Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>