force-app/main/default/objects/copado__Artifact_Dependency__c/fields/copado__Dependent_Artifact__c.field-meta.xml
<CustomField>
    <fullName>copado__Dependent_Artifact__c</fullName>
    <inlineHelpText>The artifact record which cannot be installed or managed without the depending</inlineHelpText>
    <label>Dependent Artifact</label>
    <referenceTo>copado__Artifact__c</referenceTo>
    <relationshipLabel>Artifact_Dependencies</relationshipLabel>
    <relationshipName>Artifact_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>