force-app/main/default/objects/copado__Artifact_Dependency__c/fields/copado__Depending_Artifact__c.field-meta.xml
<CustomField>
    <fullName>copado__Depending_Artifact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The depending package artifact which contains required dependencies for the dependent package&apos;s metadata</inlineHelpText>
    <label>Depending Artifact</label>
    <referenceTo>copado__Artifact__c</referenceTo>
    <relationshipLabel>Artifact_Dependencies (Depending Artifact)</relationshipLabel>
    <relationshipName>Artifact_Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>