force-app/main/default/objects/copado__Artifact_Dependency__c/fields/copado__Depending_Artifact_Version__c.field-meta.xml
<CustomField>
    <fullName>copado__Depending_Artifact_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The minumum or exact version of depending artifact. This particular version will be used during version creation and installation operations.</inlineHelpText>
    <label>Depending Artifact Version</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Depending version should be selected among the depending artifact&apos;s versions.</errorMessage>
        <filterItems>
            <field>$Source.copado__Depending_Artifact__c</field>
            <operation>equals</operation>
            <valueField>copado__Artifact_Version__c.copado__Artifact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>copado__Artifact_Version__c</referenceTo>
    <relationshipLabel>Artifact_Dependencies</relationshipLabel>
    <relationshipName>Artifact_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>