force-app/main/default/objects/copado__Artifact_Dependency__c/fields/copado__Depends_on_the_latest_version__c.field-meta.xml
<CustomField>
    <fullName>copado__Depends_on_the_latest_version__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the latest version of the depending version will be used for version creation and installation operations</inlineHelpText>
    <label>Depends on the latest version</label>
    <type>Checkbox</type>
</CustomField>